<?xml version="1.0"?>
<package format="2">
  <name>robot_planning</name>
  <version>0.0.0</version>
  <description>The motion planning package</description>
  <maintainer email="ssagrawal@wpi.edu">Sapan Agrawal</maintainer>
  <license>BSD</license>
  

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>

  <build_depend>map_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>map_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  
  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>message_exectime</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
